Scroll beaviour added

--- a/src/Components/Navbar/Navbar.css
+++ b/src/Components/Navbar/Navbar.css
@@ -45,7 +45,11 @@
     font-weight: 500;
     transition: 0.5s;
 }
-
+.nav-connect a{
+    text-decoration: none;
+    background: linear-gradient(267deg,#DA7C25 0.36%,#B923E1 102.06%);
+    color: #ffffff;
+}
 .nav-connect:hover {
     transform: scale(1.05);
 }
